Updated by task 'AUTO_TM_MT_1718839988263'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/0edc5cc335bb2017e8477bfdaf44a033ba020d6a

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -3,7 +3,7 @@ title: Ver las notas de la versión de Adobe Analytics de 2020
 description: Notas de la versión de Analytics de 2020
 feature: Release Notes
 exl-id: 4a0bb2f4-23dd-4772-80fb-5cffbc80c26b
-source-git-commit: 914b822aae659d1d0f0b8a98480090ead99e102a
+source-git-commit: 75ae77c1da1b578639609888e794e13d965ef669
 workflow-type: tm+mt
 source-wordcount: '12336'
 ht-degree: 97%
@@ -63,7 +63,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement, co
 
 ### Correcciones
 
-* Se ha corregido un problema con el código del complemento DFA Connector en Experience Platform Launch que devolvía un error. (AN-214531)
+* Se ha corregido un problema con el código del complemento DFA Connector en el Experience Platform Launch que devolvía un error. (AN-214531)
 * Se ha corregido un problema con un [!UICONTROL informe breve] dañado que provocaba un error al acceder a un proyecto de [!UICONTROL Espacio de trabajo]. (AN-230776)
 * Se ha corregido un problema que se producía al abrir un vínculo de alerta en [!UICONTROL Espacio de trabajo] y al intentar editar el proyecto. (AN-230853)
 * Se ha corregido un problema por el que los caracteres GB18030 aparecían confusos en los nombres de usuario en algunas páginas de [!UICONTROL Componentes]. (AN-233863)
@@ -365,7 +365,7 @@ Consulte [Notas de la versión de AppMeasurement para JavaScript](https://experi
 
 | Función | Descripción |
 | -----------| ---------- |
-| Compatibilidad de Analytics con Adobe Experience Platform Edge Network | Ahora puede reenviar la recopilación de datos mediante la red perimetral a Adobe Analytics. |
+| Compatibilidad de Analytics con el Edge Network de Adobe Experience Platform | Ahora puede reenviar la recopilación de datos mediante el Edge Network a Adobe Analytics. |
 | [!UICONTROL Espacio de trabajo]: Crear automáticamente tablas de forma libre a partir de un estado en blanco | Anteriormente, no se podían soltar componentes directamente en un proyecto o panel en blanco; primero tenía que agregar una tabla de forma libre. Ahora puede soltar componentes directamente en un proyecto o panel en blanco, y automáticamente se creará una tabla de forma libre en un formato recomendado. Además, se mejoró la forma en que se gestionan los tipos de componentes mixtos (p. ej., dimensiones y métricas) al soltarlos juntos en una tabla de forma libre en blanco. |
 
 ### Correcciones de Analytics
