--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -4,9 +4,9 @@ description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
 source-git-commit: 75ae77c1da1b578639609888e794e13d965ef669
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5016'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -143,7 +143,7 @@ AN-312198; AN-338009; AN-339549; AN-333970; AN-334790; AN-336461; AN-336572; AN-
 | ----------- | ---------- | ---------- |
 | **13 meses de caducidad de`cust_visids`** guardado | 20 de marzo de 2024 | Una próxima versión del motor de procesamiento de la visita de análisis, prevista para abril o mayo, empezará a aplicar una caducidad de 13 meses de `cust_visids` guardado. Si el conjunto de informes tiene activada la opción &quot;Habilitar identificación de visitantes entre dispositivos&quot;, este ajuste se utiliza para encontrar `cust_visid` para un `visid_high/visid_low value` sin ningún `cust_visid` en la visita. Actualmente, no hay caducidad de la asignación de un `cust_visid` para un `visid_high/visid_low`. Con esta versión, si han pasado 13 meses o más desde que `visid_high/visid_low` tuvo un `cust_visid` en una visita, la asignación caducará. |
 | **Adiciones de miembros de objeto de API de Adobe** | 17 de enero de 2024 | Adobe puede añadir miembros de solicitud y respuesta opcionales (pares de nombre/valor) a objetos de API existentes sin previo aviso ni cambios en las versiones. Adobe le recomienda que consulte la documentación de la API de cualquier herramienta de terceros que integre con nuestras API para que dichas adiciones se ignoren en el procesamiento, si no se comprenden. Si se implementan correctamente, estas adiciones son cambios no rupturistas para su implementación. Adobe no quitará los parámetros ni añadirá los parámetros necesarios sin antes proporcionar una notificación estándar mediante las notas de la versión. |
-| **`getPageLoadTime`complemento obsoleto** | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza el [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming) , que queda obsoleta en la mayoría de los navegadores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
+| **`getPageLoadTime` complemento obsoleto** | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza la interfaz [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming), la cual está obsoleta en la mayoría de los exploradores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
 
 {style="table-layout:auto"}
 
@@ -193,7 +193,7 @@ AAN-328239; AN-332908; AN-335449; AN-335517; AN-336075; AN-336100; AN-336128; AN
 | Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | Adiciones de miembros de objeto de API de Adobe | 17 de enero de 2024 | Adobe puede añadir miembros de solicitud y respuesta opcionales (pares de nombre/valor) a objetos de API existentes sin previo aviso ni cambios en las versiones. Adobe le recomienda que consulte la documentación de la API de cualquier herramienta de terceros que integre con nuestras API para que dichas adiciones se ignoren en el procesamiento, si no se comprenden. Si se implementan correctamente, estas adiciones son cambios no rupturistas para su implementación. Adobe no quitará los parámetros ni añadirá los parámetros necesarios sin antes proporcionar una notificación estándar mediante las notas de la versión. |
-| `getPageLoadTime` complemento obsoleto | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza el [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming) , que queda obsoleta en la mayoría de los navegadores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
+| `getPageLoadTime` complemento obsoleto | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza la interfaz [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming), la cual está obsoleta en la mayoría de los exploradores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
 
 {style="table-layout:auto"}
 
@@ -238,7 +238,7 @@ AN-323975; AN-325383; AN-325809; AN-326787; AN-331611; AN-331818; AN-332124; AN-
 | Aviso | Fecha de incorporación o actualización | Descripción |
 | ----------- | ---------- | ---------- |
 | Adiciones de miembros de objeto de API de Adobe | 17 de enero de 2024 | Adobe puede añadir miembros de solicitud y respuesta opcionales (pares de nombre/valor) a objetos de API existentes sin previo aviso ni cambios en las versiones. Estas adiciones deben ser cambios importantes para la implementación. Adobe recomienda que se consulte la documentación de la API de cualquier herramienta de terceros que se integre con nuestras API para que dichas adiciones se ignoren en el procesamiento si no se comprenden. Adobe no quitará los parámetros ni añadirá los parámetros necesarios sin antes proporcionar una notificación estándar mediante las notas de la versión. |
-| `getPageLoadTime` complemento obsoleto | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza el [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming) , que queda obsoleta en la mayoría de los navegadores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
+| `getPageLoadTime` complemento obsoleto | 10 de enero de 2024 | Este complemento ya no es compatible. Su código utiliza la interfaz [`PerformanceTiming`](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceTiming), la cual está obsoleta en la mayoría de los exploradores modernos. Se ha iniciado el trabajo en un complemento actualizado. |
 
 {style="table-layout:auto"}
 
