--- a/help/release-notes/2024.md
+++ b/help/release-notes/2024.md
@@ -3,10 +3,10 @@ title: Ver las notas de la versión de Adobe Analytics de 2024
 description: Notas de la versión de Analytics de 2024
 feature: Release Notes
 exl-id: ffbeb9e9-a377-4a1c-9c43-6a3c887255e5
-source-git-commit: 75ae77c1da1b578639609888e794e13d965ef669
-workflow-type: ht
+source-git-commit: cf7a3abc5e9d4bea834767d074eb5e66f30ea332
+workflow-type: tm+mt
 source-wordcount: '5016'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
@@ -248,7 +248,7 @@ AN-323975; AN-325383; AN-325809; AN-326787; AN-331611; AN-331818; AN-332124; AN-
 | --- | --- | --- |
 | **EOL para [!DNL Reports & Analytics]** | 10 de enero de 2024 | A partir del **17 de enero de 2024**, Adobe tiene la intención de descatalogar [!DNL Reports & Analytics] y los informes y funciones que lo acompañaban. Los informes, las visualizaciones y la tecnología subyacente que alimentan [!DNL Reports & Analytics] ya no cumplen los estándares tecnológicos de Adobe. La mayoría de las funciones de [!DNL Reports & Analytics] están disponibles en [Analysis Workspace](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/home.html?lang=es). Desde el lanzamiento de Analysis Workspace en 2015, las funcionalidades y capacidades de [!DNL Reports & Analytics] se han trasladado a Analysis Workspace y se ha alcanzado un umbral de paridad de flujo de trabajo. [Este aviso](https://spark.adobe.com/page/6WnF8JK6IRDhf/) explica el proceso de finalización de la vida útil.<p>El 17 de enero de 2024, finalizaremos muchas de las funciones de Reports &amp; Analytics asociadas, incluidas, entre otras, las siguientes: Informes programados, Extractos de datos e Informes DL.  A partir del 17 de enero de 2024, ya no se enviarán los informes programados.  Además, ya no podrá programar informes futuros después del 17 de enero de 2024. |
 | **Funcionalidad del final de vida útil de las [!UICONTROL Listas de publicación]** | 10 de enero de 2024 | Como parte del final de la vida útil de Reports &amp; Analytics, [!UICONTROL Listas de publicación] llegó al final de su vida útil el **17 de enero de 2024**.  No podrá crear [!UICONTROL Listas de publicación] nuevas ni acceder a las existentes para enviar o programar proyectos de [!UICONTROL Analysis Workspace]. |
-| **Fin de la vida útil para Data Workbench** | 2 de enero de 2024 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**.  Consulte [Anuncio del fin de la vida útil de Data Workbench](https://express.adobe.com/page/GSu6oKOD88GAj/) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
+| **Fin de la vida útil para Data Workbench** | 2 de enero de 2024 | Adobe tiene planeado el fin de la vida útil de Data Workbench con fecha de aplicación el **31 de diciembre de 2023**.  Consulte [Anuncio del fin de la vida útil de Data Workbench](https://experienceleague.adobe.com/en/docs/discontinued/using/data-workbench) para obtener más información. Póngase en contacto con el Administrador de cuentas de Adobe de su organización si tiene alguna pregunta. |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Adobe I/O no permitirá que se creen nuevas credenciales de JWT a partir del 1 de mayo de 2024. Los clientes que utilizan JWT deben crear una nueva credencial de servidor a servidor OAuth o migrar su credencial JWT existente a una credencial de servidor a servidor OAuth. Los clientes también deben actualizar sus aplicaciones cliente para utilizar las nuevas credenciales de servidor a servidor de OAuth. <ul><li>[Migración de credenciales de cuenta de servicio (JWT)](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/migration/)</li><li>[Guía de implementación para aplicaciones nuevas y antiguas con OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)<li>[Uso de las nuevas credenciales de servidor a servidor de OAuth](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/implementation/)</li><li>[Preguntas frecuentes](https://developer.adobe.com/developer-console/docs/guides/authentication/ServerToServerAuthentication/faqs/)</li></ul> |
 
 {style="table-layout:auto"}
